# prism3d

./: .gitignore  Makefile  apptainer.def  pyproject.toml  train_accelerator_50000.slurm
example_output/: report.html  report.json  viewer_3d.html
prism3d/: Architecture.md  CLAUDE.md  Makefile  README.md  _rust_backend.py  apptainer.def  density_fields.py  evaluate.py  grid.py  run.py  run_orion_bar_256.slurm  solver.py  solver_3d.py  train_accelerator_200000.slurm  train_accelerator_5000.slurm  viewer_export.py
prism3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prism3d/chemistry/: accelerator.py  network.py  solver.py  train_hpc.py
prism3d/data/: download_data.py  prepare_data.py
prism3d/examples/: benchmark_config.py  blowout.py  orion_bar.py  orion_bar_3d.py  roellig_benchmark.py  turbulent_cloud_3d.py
prism3d_delivery/: prism3d_letter_v2.tex
prism3d_delivery/prism3d/: __init__.py  __main__.py  evaluate.py  grid.py  pyproject.toml  run.py  solver.py  solver_3d.py  viewer.html  viewer_export.py
prism3d_delivery/prism3d/chemistry/: train_hpc.py
prism3d_delivery/prism3d/cosmic_rays/: attenuation.py
prism3d_delivery/prism3d/docs/: RUNNING.md
prism3d_delivery/prism3d/examples/: orion_bar.py  orion_bar_3d.py  roellig_benchmark.py  turbulent_cloud_3d.py
prism3d_delivery/prism3d/grains/: physics.py  themis.py
prism3d_delivery/prism3d/observations/: spectra.py
prism3d_delivery/prism3d/radiative_transfer/: fuv_rt_3d.py  shielding.py
prism3d_delivery/prism3d/thermal/: balance.py  cooling.py
rust/src/: lib.rs  (+4 more)
(+16 files in other folders)
